fix(security): implement JWT token blacklist + fix all auth security issues
Root causes fixed:

1. JWT secret too short / weak
   - application.yml: secret default is now >=32 chars (256-bit minimum)
   - JwtTokenProvider: @PostConstruct validates secret length and fails fast
     at startup if JWT_SECRET env var is not set correctly
   - Expiration reduced from 24h to 8h to limit exposure window

2. Empty logout() with no session invalidation
   - Created BlacklistedToken entity (token_blacklist table)
   - Created TokenBlacklistRepository with hash lookup + expired-entry cleanup
   - Created TokenBlacklistService: SHA-256 hashes raw JWT before storage
     (raw token never persisted), idempotent, hourly purge of expired rows
   - AuthService.logout(rawToken, userEmail) now delegates to blacklist service
   - AuthController.logout() extracts Bearer token from Authorization header
     and @AuthenticationPrincipal to pass both to the service

3. Blacklisted tokens still accepted by filter
   - JwtAuthenticationFilter: checks TokenBlacklistService.isBlacklisted()
     BEFORE signature validation; rejects if found

4. /api/auth/logout was permitAll (anonymous)
   - SecurityConfig: moved logout to .anyRequest().authenticated() so a valid
     token is required to call it (enabling @AuthenticationPrincipal population)
   - Added @EnableScheduling for periodic blacklist cleanup job

5. Worklog hours validation
   - Max per entry reduced from 999.99h to 24h (one calendar day)
   - Added 2 decimal place precision enforcement

TDD:
   - TokenBlacklistServiceTest: 9 tests covering blacklist, isBlacklisted,
     purgeExpiredTokens, idempotency, hash-not-raw-token, expiry propagation